# finnhub-stock-analysis

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindJSON.cmake  FindLibWebsockets.cmake
lib/: definitions.h.in
